--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-typescript-starter",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "Simple Node.js typescript starter boilerplate",
   "author": "madinar.cse@gmail.com",
   "keywords": [
@@ -15,20 +15,29 @@
     "dev": "run-s build && cross-env nodemon",
     "build": "run-s clean && run-p build:tsc",
     "clean": "trash dist",
-    "build:tsc": "tsc -p tsconfig.json"
+    "build:tsc": "tsc -p tsconfig.json",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix --ext .ts"
   },
   "dependencies": {
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "cross-env": "^6.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-ts-anaet": "0.0.4",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
     "trash-cli": "^3.0.0",
     "ts-node": "^8.5.4",
-    "tslib": "^1.10.0",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
   }
 }
